Create splash viewmodel tests and delete unused gradle dependencies, fix warning tests and rename some names